--- a/i.html
+++ b/i.html
@@ -234,7 +234,7 @@
     <div class="container">
         <div class="header">
             <h1>Get In Touch</h1>
-            <p>Let's create something amazing together</p>
+            <p>portfolio contact us</p>
         </div>
 
         <div class="success-message" id="successMessage">
